--- a/src/Lanting.IDCode.Web.Mvc/Views/Product/Create.cshtml
+++ b/src/Lanting.IDCode.Web.Mvc/Views/Product/Create.cshtml
@@ -1,6 +1,6 @@
 ﻿@using Lanting.IDCode.Web.Startup
 @{
-    ViewData["Title"] = "添加产品";
+    ViewData["Title"] = "添加页面";
     ViewBag.CurrentPageName = PageNames.Products;
 }
 <script src="~/view-resources/Views/Products/tiny/tinymce.min.js"></script>
@@ -73,8 +73,8 @@
     <div class="activityshow_box" style="margin-top:40%;width: 100%;display:none;margin-let:15%;margin-right:15%;padding:0;margin:2px 0;">
     </div>
 
-    <h1 class="editable" id="elm2">请输入产品名称</h1>
-    <textarea id="elm1">请输入产品图文内容...</textarea>                 <!-- 编辑框 elm1为此部件ID-->
+    <h1 class="editable" id="elm2">请输入页面名称</h1>
+    <textarea id="elm1">请输入页面图文内容...</textarea>                 <!-- 编辑框 elm1为此部件ID-->
     <div class="modal-footer">
         <button type="button" class="btn btn-default close-button waves-effect" data-dismiss="modal">@L("Cancel")</button>
         <button type="button" class="btn btn-primary save-button waves-effect">@L("Save")</button>
