--- a/src/Lanting.IDCode.Web.Mvc/Views/Product/Index.cshtml
+++ b/src/Lanting.IDCode.Web.Mvc/Views/Product/Index.cshtml
@@ -38,8 +38,8 @@
                     <thead>
                         <tr>
 
-                            <th>产品代号</th>
-                            <th>产品名称</th>
+                            <th>页面代号</th>
+                            <th>页面名称</th>
                             <th>有否有效</th>
                             <th>描述</th>
 
@@ -81,7 +81,7 @@
             <form name="productInfoCreateForm" role="form" novalidate class="form-validation">
                 <div class="modal-header">
                     <h4 class="modal-title">
-                        <span>创建新产品图文</span>
+                        <span>创建新页面图文</span>
                     </h4>
                 </div>
                 <div class="modal-body">
@@ -90,7 +90,7 @@
                             <div class="form-group form-float">
                                 <div class="form-line">
                                     <input class="form-control" type="text" id="Code" name="Code">
-                                    <label for="Code" class="form-label">产品代号</label>
+                                    <label for="Code" class="form-label">页面代号</label>
                                 </div>
                             </div>
                         </div>
@@ -98,7 +98,7 @@
                             <div class="form-group form-float">
                                 <div class="form-line">
                                     <input class="form-control" type="text" id="FullName" name="FullName">
-                                    <label for="FullName" class="form-label">产品名称</label>
+                                    <label for="FullName" class="form-label">页面名称</label>
                                 </div>
                             </div>
                         </div>
@@ -112,7 +112,7 @@
                     <div class="form-group form-float">
                         <div class="activityshow_box" style="margin-top:40%;width: 100%;display:none;margin-left:15%;margin-right:15%;padding:0;margin:2px 0;">
                         </div>
-                        <textarea id="elm1" name="HtmlContent" >请输入产品图文内容...</textarea>
+                        <textarea id="elm1" name="HtmlContent" >请输入页面图文内容...</textarea>
                        
                     </div>
                     <div class="modal-footer">
