--- a/src/Lanting.IDCode.Web.Mvc/wwwroot/template/product.html
+++ b/src/Lanting.IDCode.Web.Mvc/wwwroot/template/product.html
@@ -1,5 +1,5 @@
 <p style="text-align: center; font-size: 15px;"><img title="TinyMCE Logo" src="//www.tinymce.com/images/glyph-tinymce@2x.png" alt="TinyMCE Logo" width="110" height="97" /></p>
-<h1 style="text-align: center;">Welcome to the TinyMCE Cloud demo!</h1>
+<h1 style="text-align: center;">Welcome to TinyMCE Cloud !</h1>
 <h5 style="text-align: center;">Note, this includes some "enterprise/premium" features.<br />Visit the <a href="https://www.tinymce.com/pricing/#demo-enterprise">pricing page</a> to learn more about our premium plugins.</h5>
 <p>Please try out the features provided in this full featured example.</p>
 <h2>Got questions or need help?</h2>
