--- a/src/Lanting.IDCode.Web.Mvc/wwwroot/template/shop.html
+++ b/src/Lanting.IDCode.Web.Mvc/wwwroot/template/shop.html
@@ -1,17 +1,17 @@
-﻿<h1 class="dfree-header mce-content-body" style="text-align: center;" contenteditable="true" spellcheck="false">The latest and greatest from TinyMCE</h1>
+﻿<h1 class="dfree-header mce-content-body" style="text-align: center;" contenteditable="true" spellcheck="false">世界上最新最好的TinyMCE</h1>
 <p><img style="display: block; margin-left: auto; margin-right: auto;" src="https://tiny.cloud/images/medium-pic.jpg" /></p>
 <p>&nbsp;</p>
-<h2>The world&rsquo;s first rich text editor in the cloud</h2>
-<p>Have you heard about Tiny Cloud? It&rsquo;s the first step in our journey to help you deliver great content creation experiences, no matter your level of expertise. 50,000 developers already agree. They get free access to our global CDN, image proxy services and auto updates to the TinyMCE editor. They&rsquo;re also ready for some exciting updates coming soon.</p>
-<p>One of these enhancements is&nbsp;<strong>Tiny Drive</strong>: imagine file management for TinyMCE, in the cloud, made super easy. Learn more at&nbsp;<a href="https://www.tiny.cloud/tinydrive/">tiny.cloud/tinydrive</a>, where you&rsquo;ll find a working demo and an opportunity to provide feedback to the product team.</p>
-<h3>An editor for every project</h3>
-<p>Here are some of our customer&rsquo;s most common use cases for TinyMCE:</p>
+<h2>富文本编辑器</h2>
+<p>H你听说过Tiny Cloud吗？这是我们的第一步，帮助你提供伟大的内容创造体验，无论你的专业水平如何。50000位开发商已经同意了。他们可以免费访问我们的全球CDN，图像代理服务和TyMyCE编辑器的自动更新。他们也准备好了一些令人兴奋的更新即将到来。</p>
+<p>其中一个增强是&nbsp;<strong>Tiny Drive</strong>: 想象TimyCE的文件管理在云端，更加简单。 Learn more at&nbsp;<a href="https://www.tiny.cloud/tinydrive/">tiny.cloud/tinydrive</a>, 在那里你可以找到一个工作演示和一个给页面团队提供反馈的机会。</p>
+<h3>每个项目的编辑器</h3>
+<p>这里有一些客户最常用的TyMyCE用例:</p>
 <ul>
-    <li>Content Management Systems (<em>e.g. WordPress, Umbraco</em>)</li>
-    <li>Learning Management Systems (<em>e.g. Blackboard</em>)</li>
-    <li>Customer Relationship Management and marketing automation (<em>e.g. Marketo</em>)</li>
-    <li>Email marketing (<em>e.g. Constant Contact</em>)</li>
-    <li>Content creation in SaaS systems (<em>e.g. Eventbrite, Evernote, GoFundMe, Zendesk</em>)</li>
+    <li>内容管理系统(<em>比如 WordPress, Umbraco</em>)</li>
+    <li>学习管理系统 (<em>比如 Blackboard</em>)</li>
+    <li>客户关系管理与市场营销自动化 (<em>比如 Marketo</em>)</li>
+    <li>电子邮件营销(<em>比如 Constant Contact</em>)</li>
+    <li>SaaS系统中的内容创建 (<em>比如 Eventbrite, Evernote, GoFundMe, Zendesk</em>)</li>
 </ul>
 <p>&nbsp;</p>
-<p>And those use cases are just the start. TinyMCE is incredibly flexible, and with hundreds of APIs there&rsquo;s likely a solution for your editor project. If you haven&rsquo;t experienced Tiny Cloud, get started today. You&rsquo;ll even get a free trial of our premium plugins &ndash; no credit card required!</p>
+<p>这些用例只是一个开始。TyMyCE是非常灵活的，并且有数百个API可能会为您的编辑器项目提供解决方案。如果你还没有经历过微小的云，那么今天就开始吧。你甚至可以免费试用我们的高级插件，不需要信用卡！</p>
