--- a/src/Lanting.IDCode.Web.Mvc/Views/Task/_EditGenerateTaskModal.cshtml
+++ b/src/Lanting.IDCode.Web.Mvc/Views/Task/_EditGenerateTaskModal.cshtml
@@ -5,107 +5,115 @@
 @{
     Layout = null;
 }
-@Html.Partial("~/Views/Shared/Modals/_ModalHeader.cshtml", new ModalHeaderViewModel(L("EditGenerateTask")))
-<div class="modal-body">
-    <form name="GenerateTaskEditForm" role="form" novalidate class="form-validation">
+@Html.Partial("~/Views/Shared/Modals/_ModalHeader.cshtml", new ModalHeaderViewModel("任务详情"))
+<div class="modal-body" >
+    <form name="GenerateTaskEditForm" role="form" novalidate class="form-validation" >
         <input type="hidden" name="Id" value="@Model.Id" />
+
         <div class="form-group form-float">
             <div class="form-line">
-                <input class="form-control" type="text" name="UserId" value="@Model.UserId" required maxlength="11">
-                <label for="UserId" class="form-label">@L("UserId")</label>
-            </div>
-        </div>
-        <div class="form-group form-float">
-            <div class="form-line">
-                <input class="form-control" type="text" name="Remark" value="@Model.Remark">
+                <input class="form-control" type="text" name="Remark" value="@Model.Remark" readonly="readonly">
                 <label for="Remark" class="form-label">@L("Remark")</label>
             </div>
         </div>
         <div class="form-group form-float">
             <div class="form-line">
-                <input class="form-control" type="text" name="Created" value="@Model.Created" required maxlength="6">
-                <label for="Created" class="form-label">@L("Created")</label>
+                <input class="form-control" type="datetime-local" name="Created" value="@Model.Created" required maxlength="6" readonly="readonly">
+                <label for="Created" class="form-label">创建时间</label>
             </div>
         </div>
         <div class="form-group form-float">
             <div class="">
-                <input id="IsSuccess" type="checkbox" name="IsSuccess" value="true" @(Model.IsSuccess ? "checked" : "") class="form-control" />
-                <label for="IsSuccess" class="form-label">@L("IsSuccess")</label>
+                <input id="IsSuccess" type="checkbox" name="IsSuccess" value="true" @(Model.IsSuccess ? "checked" : "") class="form-control" readonly="readonly"/>
+                <label for="IsSuccess" class="form-label">是否成功</label>
+            </div>
+        </div>
+
+        @if (!Model.IsSuccess)
+        {
+            <div class="form-group form-float">
+                <div class="form-line">
+                    <input class="form-control" type="text" name="FailReason" value="@Model.FailReason" readonly="readonly">
+                    <label for="FailReason" class="form-label">失败原因</label>
+                </div>
+            </div>
+        }
+        <div class="form-group form-float">
+            <div class="form-line">
+                <input class="form-control" type="text" name="Completed" value="@Model.Completed" maxlength="6" readonly="readonly">
+                <label for="Completed" class="form-label">是否已完成</label>
             </div>
         </div>
         <div class="form-group form-float">
             <div class="form-line">
-                <input class="form-control" type="text" name="FailReason" value="@Model.FailReason">
-                <label for="FailReason" class="form-label">@L("FailReason")</label>
+                <input class="form-control" type="text" name="ProductId" value="@Model.ProductId" required maxlength="11" readonly="readonly">
+                <label for="ProductId" class="form-label">使用页面名称</label>
             </div>
         </div>
         <div class="form-group form-float">
             <div class="form-line">
-                <input class="form-control" type="text" name="Completed" value="@Model.Completed" maxlength="6">
-                <label for="Completed" class="form-label">@L("Completed")</label>
+                <input class="form-control" type="text" name="GenerateCount" value="@Model.GenerateCount" required maxlength="11" readonly="readonly">
+                <label for="GenerateCount" class="form-label">生成数量</label>
             </div>
         </div>
         <div class="form-group form-float">
             <div class="form-line">
-                <input class="form-control" type="text" name="ProductId" value="@Model.ProductId" required maxlength="11">
-                <label for="ProductId" class="form-label">@L("ProductId")</label>
+                <input class="form-control" type="text" name="TaskStatu" value="@Model.TaskStatu" required maxlength="11" readonly="readonly">
+                <label for="TaskStatu" class="form-label">运行状态</label>
             </div>
         </div>
-        <div class="form-group form-float">
-            <div class="form-line">
-                <input class="form-control" type="text" name="GenerateCount" value="@Model.GenerateCount" required maxlength="11">
-                <label for="GenerateCount" class="form-label">@L("GenerateCount")</label>
+
+        @if (Model.IsSuccess)
+        {
+            <div class="form-group form-float">
+                <div class="form-line">
+                    <input class="form-control" type="text" name="DataFilePath" value="@Model.DataFilePath" readonly="readonly">
+                    <label for="DataFilePath" class="form-label">生成文件</label>
+                </div>
             </div>
-        </div>
-        <div class="form-group form-float">
-            <div class="form-line">
-                <input class="form-control" type="text" name="TaskStatu" value="@Model.TaskStatu" required maxlength="11">
-                <label for="TaskStatu" class="form-label">@L("TaskStatu")</label>
-            </div>
-        </div>
-        <div class="form-group form-float">
-            <div class="form-line">
-                <input class="form-control" type="text" name="DataFilePath" value="@Model.DataFilePath">
-                <label for="DataFilePath" class="form-label">@L("DataFilePath")</label>
-            </div>
-        </div>
+        }
         <div class="form-group form-float">
             <div class="">
-                <input id="IsAntiFake" type="checkbox" name="IsAntiFake" value="true" @(Model.IsAntiFake ? "checked" : "") class="form-control" />
-                <label for="IsAntiFake" class="form-label">@L("IsAntiFake")</label>
+                <input id="IsAntiFake" type="checkbox" name="IsAntiFake" value="true" @(Model.IsAntiFake ? "checked" : "") class="form-control" readonly="readonly" />
+                <label for="IsAntiFake" class="form-label">是否防伪</label>
             </div>
         </div>
-        <div class="form-group form-float">
-            <div class="form-line">
-                <input class="form-control" type="text" name="AFCodeLength" value="@Model.AFCodeLength" maxlength="11">
-                <label for="AFCodeLength" class="form-label">@L("AFCodeLength")</label>
+
+        @if (Model.IsAntiFake)
+        {
+            <div class="form-group form-float">
+                <div class="form-line">
+                    <input class="form-control" type="text" name="AFCodeLength" value="@Model.AFCodeLength" maxlength="11" readonly="readonly">
+                    <label for="AFCodeLength" class="form-label">防伪码长度</label>
+                </div>
             </div>
-        </div>
-        <div class="form-group form-float">
-            <div class="form-line">
-                <input class="form-control" type="text" name="AntiFackCodeType" value="@Model.AntiFackCodeType" required maxlength="11">
-                <label for="AntiFackCodeType" class="form-label">@L("AntiFackCodeType")</label>
+            <div class="form-group form-float">
+                <div class="form-line">
+                    <input class="form-control" type="text" name="AntiFackCodeType" value="@Model.AntiFackCodeType" required maxlength="11" readonly="readonly">
+                    <label for="AntiFackCodeType" class="form-label">防伪码类型</label>
+                </div>
             </div>
-        </div>
-        <div class="form-group form-float">
-            <div class="form-line">
-                <input class="form-control" type="text" name="AntiFackCode" value="@Model.AntiFackCode">
-                <label for="AntiFackCode" class="form-label">@L("AntiFackCode")</label>
+        }
+        @if (Model.IsSuccess)
+        {
+            <div class="form-group form-float">
+                <div class="form-line">
+                    <input class="form-control" type="text" name="StartOne" value="@Model.StartOne" required maxlength="20" readonly="readonly">
+                    <label for="StartOne" class="form-label">开始位置</label>
+                </div>
             </div>
-        </div>
-        <div class="form-group form-float">
-            <div class="form-line">
-                <input class="form-control" type="text" name="StartOne" value="@Model.StartOne" required maxlength="20">
-                <label for="StartOne" class="form-label">@L("StartOne")</label>
+            <div class="form-group form-float">
+                <div class="form-line">
+                    <input class="form-control" type="text" name="EndOne" value="@Model.EndOne" required maxlength="20" readonly="readonly">
+                    <label for="EndOne" class="form-label">结束位置</label>
+                </div>
             </div>
-        </div>
-        <div class="form-group form-float">
-            <div class="form-line">
-                <input class="form-control" type="text" name="EndOne" value="@Model.EndOne" required maxlength="20">
-                <label for="EndOne" class="form-label">@L("EndOne")</label>
-            </div>
-        </div>
+        }
+
     </form>
 </div>
-@Html.Partial("~/Views/Shared/Modals/_ModalFooterWithSaveAndCancel.cshtml")
+<div class="modal-footer">
+    <button type="button" class="btn btn-default close-button waves-effect" data-dismiss="modal">@L("Cancel")</button>
+</div>
+
 <script src="~/view-resources/Views/GenerateTask/_EditGenerateTaskModal.js" asp-append-version="true"></script>
