--- a/src/Lanting.IDCode.Web.Mvc/Views/Users/_EditUserModal.cshtml
+++ b/src/Lanting.IDCode.Web.Mvc/Views/Users/_EditUserModal.cshtml
@@ -58,7 +58,7 @@
                         <div class="form-group form-float">
                             <div class="form-line">
                                 <input id="allowProductCount" type="text" name="AllowProductCount" value="@Model.User.AllowProductCount" required maxlength="32" class="validate form-control">
-                                <label for="surname" class="form-label">可设置产品数量</label>
+                                <label for="surname" class="form-label">可设置页面数量</label>
                             </div>
                         </div>
                     </div>
